# glps

./: CMakeLists.txt
doc/: approach.txt
etc/: cflags.cmake  t_delay.wisdom  tests.cmake
src/frontend/: CMakeLists.txt  corrtest.cc  example1.cc
src/signal/: fft.cc  fft.hh  signal.cc  signal.hh
src/tests/: CMakeLists.txt  alwayspass.cc  delay.cc
src/util/: random.cc  random.hh  timer.hh
